<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_dialog_value1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_dialog2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_dialog_value2"
            android:hint="@string/et_dialog_hint"
            android:gravity="center"
            android:singleLine="true"
            android:maxLines="1"
            android:textColorHint="@color/secondary_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>
        <Button
            android:backgroundTint="@color/colorAccent"
            android:id="@+id/btn_dialog_comp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compare_dialog" />
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>
        <Button
            android:id="@+id/btn_dialog_cancel"
            android:backgroundTint="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_dialog" />
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>
    </LinearLayout>
</LinearLayout>